# upl_scroller

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.cross  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  docker-compose.yml  fonts.sh  startvlc.sh  toolchain-arm.cmake  upl_scroller
src/: Bounce.cpp  Bounce.h  CairoOverlay.cpp  CairoOverlay.h  FontLoader.cpp  FontLoader.h  ImageLoader.cpp  ImageLoader.h  Logging.cpp  Logging.h  MpvIpc.cpp  MpvIpc.h  ScrollEvent.cpp  ScrollEvent.h  claude_status_monitor.cpp  claude_status_monitor.h  mainLoop.cpp  mainLoop.h  scroll.cpp  scroll.h
